Add docker file for run Adempiere  in Web Server Jetty

--- a/docker/tomcat/Dockerfile
+++ b/docker/tomcat/Dockerfile
@@ -10,13 +10,14 @@ ENV ADEMPIERE_HOME="/opt/Adempiere" \
 	ADEMPIERE_DB_NAME="adempiere" \
 	ADEMPIERE_DB_PORT="5432" 
 
-COPY docker/Adempiere.properties $ADEMPIERE_HOME/
+COPY docker/AdempiereTemplate.properties $ADEMPIERE_HOME/Adempiere.properties
 COPY docker/tomcat/settings/*.xml $CATALINA_HOME/conf
 COPY docker/tomcat/settings/setenv.sh $CATALINA_HOME/bin
 COPY build/libs/zk-ui.war $CATALINA_HOME/webapps/webui.war
 COPY build/libs/zk-ui.jar $CATALINA_HOME/lib
-COPY build/distributions/zk-ui.tar $CATALINA_HOME/lib
+COPY build/distributions/zk-ui.zip $CATALINA_HOME/lib/zk-ui.zip
 
-RUN cd lib && \
-	tar -xvf zk-ui.tar zk-ui/lib --transform='s/.*\///' && \
-	rm -R lib zk-ui.tar
+RUN apt update && apt install unzip && \
+	ls $CATALINA_HOME/lib/ && \
+	unzip -j -o $CATALINA_HOME/lib/zk-ui.zip -d $CATALINA_HOME/lib/ && \
+	rm -R $CATALINA_HOME/lib/javaee-api* $CATALINA_HOME/lib/zk-ui.zip
