--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -137,16 +137,20 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
-      - name: Download build dist app
-        uses: actions/download-artifact@v3
+      - name: Set up Java JDK 11
+        uses: actions/setup-java@v3
         with:
-          name: zk-ui.zip
-          path: dist
+          distribution: 'temurin'
+          java-package: 'jdk'
+          java-version: 11
+          architecture: x64
 
-      - name: Unzip dist file
-        run: |
-          cd dist
-          unzip -o zk-ui.zip
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.0.1
+      - run: |
+          gradle createRelease
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
