--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,11 +30,12 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 8.0.1
+          gradle-version: 8.0.2
           arguments: createRelease
         env:
           GITHUB_DEPLOY_USER: ${{ github.actor }}
           GITHUB_DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
 
       - name: Upload dist app zip artifact
         uses: actions/upload-artifact@v3
@@ -148,12 +149,20 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 8.0.1
+          gradle-version: 8.0.2
       - run: |
           gradle createRelease
+        env:
+          GITHUB_DEPLOY_USER: ${{ github.actor }}
+          GITHUB_DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
+        env:
+          GITHUB_DEPLOY_USER: "${{ github.actor }}"
+          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
         with:
           # CONFIGURE DOCKER SECRETS INTO REPOSITORY
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -170,3 +179,67 @@ jobs:
             ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-alpine
           build-args: |
             JDK_RELEASE=11-jdk-alpine
+
+  # Check secrets to push image in docker hub registry
+  check-digital-ocean-secrets:
+    name: Check if digital ocean registry information was set on secrets
+    needs:
+      - build-app
+    runs-on: ubuntu-latest
+    outputs:
+      is_have_secrets: ${{ steps.check_secret_job.outputs.is_have_secrets }}
+    steps:
+      - id: check_secret_job
+        run: |
+          if [[ "${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" != "" && \
+                "${{ secrets.DIGITALOCEAN_ORGANIZATION }}" != "" ]]; \
+          then
+            echo "Secrets to use a container registry are configured in the repo"
+            echo "is_have_secrets=true" >> $GITHUB_OUTPUT
+          else
+            echo "Secrets to use a container registry were not configured in the repo"
+            echo "is_have_secrets=false" >> $GITHUB_OUTPUT
+          fi
+
+  push-imame-do:
+    name: Push Docker image to Digital Ocean
+    needs:
+      - check-digital-ocean-secrets
+    # Skip step based on secret
+    if: needs.check-digital-ocean-secrets.outputs.is_have_secrets == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up Java JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-package: 'jdk'
+          java-version: 11
+          architecture: x64
+
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.0.2
+      - run: |
+          gradle createRelease
+        env:
+          GITHUB_DEPLOY_USER: "${{ github.actor }}"
+          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      - name: Log in to DO Container Registry
+        run: doctl registry login --expiry-seconds 600
+      - name: Build image
+        run: docker build -t adempiere-zk-jetty -f docker/jetty/Dockerfile .
+      - name: Tag image
+        run: docker tag adempiere-zk-jetty registry.digitalocean.com/${{ secrets.DIGITALOCEAN_ORGANIZATION }}/adempiere-zk-jetty:${{ github.event.release.tag_name }}
+      - name: Push image to DO Container Registry
+        run: docker push registry.digitalocean.com/${{ secrets.DIGITALOCEAN_ORGANIZATION }}/adempiere-zk-jetty:${{ github.event.release.tag_name }}
