--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -172,13 +172,69 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/jetty/Dockerfile
+          file: docker/jetty/Dockerfile.alpine
           push: true
           tags: |
             ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-alpine-${{ github.event.release.tag_name }}
             ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-alpine
-          build-args: |
-            JDK_RELEASE=11-jdk-alpine
+
+  # TODO: Download .tar and add docker image without uncompress
+  # Publish docker multiplatform image in Docker Hub Registry to application
+  push-alpine-dhr:
+    name: Push Jetty docker multiplatform image to Docker Hub
+    needs:
+      - check-docker-secrets
+    # Skip step based on secret
+    if: needs.check-docker-secrets.outputs.is_have_secrets == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up Java JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-package: 'jdk'
+          java-version: 11
+          architecture: x64
+
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.0.2
+      - run: |
+          gradle createRelease
+        env:
+          GITHUB_DEPLOY_USER: ${{ github.actor }}
+          GITHUB_DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        env:
+          GITHUB_DEPLOY_USER: "${{ github.actor }}"
+          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
+          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
+        with:
+          # CONFIGURE DOCKER SECRETS INTO REPOSITORY
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Push image in Docker Hub
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: .
+          file: docker/jetty/Dockerfile
+          platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-${{ github.event.release.tag_name }}
+            ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty
 
   # Check secrets to push image in docker hub registry
   check-digital-ocean-secrets:
