--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,6 +60,18 @@ jobs:
         with:
           name: zk-ui.tar.MD5
           path: build/release/zk-ui.tar.MD5
+      
+      - name: Upload dist app tar artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: zk-ui.war
+          path: build/release/zk-ui.war
+
+      - name: Upload dist app war.MD5 artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: zk-ui.war.MD5
+          path: build/release/zk-ui.war.MD5
 
 
   publish-binaries:
@@ -100,6 +112,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: zk-ui.tar.MD5/zk-ui.tar.MD5
+       
+      - name: Upload war
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: zk-ui.war/zk-ui.war
+
+      - name: Upload war.MD5
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: zk-ui.war.MD5/zk-ui.war.MD5
 
 
   # Check secrets to push image in docker hub registry
@@ -137,37 +163,25 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-
-      - name: Set up Java JDK 11
-        uses: actions/setup-java@v3
+      - name: Download build zip app
+        uses: actions/download-artifact@v3
         with:
-          distribution: 'temurin'
-          java-package: 'jdk'
-          java-version: 11
-          architecture: x64
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
+          name: zk-ui.zip
+      - name: Download build war app
+        uses: actions/download-artifact@v3
         with:
-          gradle-version: 8.0.2
-      - run: |
-          gradle createRelease
-        env:
-          GITHUB_DEPLOY_USER: ${{ github.actor }}
-          GITHUB_DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
-          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
-
+          name: zk-ui.war
+      - name: Unzip Asset
+        run: |
+          unzip zk-ui.zip -d docker/jetty/
+      - name: Move war
+        run: mv zk-ui.war docker/jetty/zk-ui/
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
-        env:
-          GITHUB_DEPLOY_USER: "${{ github.actor }}"
-          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
-          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
         with:
           # CONFIGURE DOCKER SECRETS INTO REPOSITORY
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
       - name: Push alpine image in Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -180,7 +194,7 @@ jobs:
 
   # TODO: Download .tar and add docker image without uncompress
   # Publish docker multiplatform image in Docker Hub Registry to application
-  push-alpine-dhr:
+  push-image-dhr:
     name: Push Jetty docker multiplatform image to Docker Hub
     needs:
       - check-docker-secrets
@@ -190,41 +204,29 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-
-      - name: Set up Java JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-package: 'jdk'
-          java-version: 11
-          architecture: x64
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 8.0.2
-      - run: |
-          gradle createRelease
-        env:
-          GITHUB_DEPLOY_USER: ${{ github.actor }}
-          GITHUB_DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
-          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Download build zip app
+        uses: actions/download-artifact@v3
+        with:
+          name: zk-ui.zip
+      - name: Download build war app
+        uses: actions/download-artifact@v3
+        with:
+          name: zk-ui.war
+      - name: Unzip Asset
+        run: |
+          unzip zk-ui.zip -d docker/jetty/
+      - name: Move war
+        run: mv zk-ui.war docker/jetty/zk-ui/
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
-        env:
-          GITHUB_DEPLOY_USER: "${{ github.actor }}"
-          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
-          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
         with:
           # CONFIGURE DOCKER SECRETS INTO REPOSITORY
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
       - name: Push image in Docker Hub
         uses: docker/build-push-action@v4.0.0
         with:
@@ -235,67 +237,3 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-${{ github.event.release.tag_name }}
             ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty
-
-  # Check secrets to push image in docker hub registry
-  check-digital-ocean-secrets:
-    name: Check if digital ocean registry information was set on secrets
-    needs:
-      - build-app
-    runs-on: ubuntu-latest
-    outputs:
-      is_have_secrets: ${{ steps.check_secret_job.outputs.is_have_secrets }}
-    steps:
-      - id: check_secret_job
-        run: |
-          if [[ "${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" != "" && \
-                "${{ secrets.DIGITALOCEAN_ORGANIZATION }}" != "" ]]; \
-          then
-            echo "Secrets to use a container registry are configured in the repo"
-            echo "is_have_secrets=true" >> $GITHUB_OUTPUT
-          else
-            echo "Secrets to use a container registry were not configured in the repo"
-            echo "is_have_secrets=false" >> $GITHUB_OUTPUT
-          fi
-
-  push-imame-do:
-    name: Push Docker image to Digital Ocean
-    needs:
-      - check-digital-ocean-secrets
-    # Skip step based on secret
-    if: needs.check-digital-ocean-secrets.outputs.is_have_secrets == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-
-      - name: Set up Java JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-package: 'jdk'
-          java-version: 11
-          architecture: x64
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 8.0.2
-      - run: |
-          gradle createRelease
-        env:
-          GITHUB_DEPLOY_USER: "${{ github.actor }}"
-          GITHUB_DEPLOY_TOKEN: "${{ secrets.DEPLOY_TOKEN }}"
-          GITHUB_DEPLOY_REPOSITORY: ${{ secrets.DEPLOY_REPOSITORY }}
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Log in to DO Container Registry
-        run: doctl registry login --expiry-seconds 600
-      - name: Build image
-        run: docker build -t adempiere-zk-jetty -f docker/jetty/Dockerfile .
-      - name: Tag image
-        run: docker tag adempiere-zk-jetty registry.digitalocean.com/${{ secrets.DIGITALOCEAN_ORGANIZATION }}/adempiere-zk-jetty:${{ github.event.release.tag_name }}
-      - name: Push image to DO Container Registry
-        run: docker push registry.digitalocean.com/${{ secrets.DIGITALOCEAN_ORGANIZATION }}/adempiere-zk-jetty:${{ github.event.release.tag_name }}
