Add publish version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,9 @@ jobs:
           java-package: 'jdk'
           java-version: 11
           architecture: x64
+      
+      - name: Set Version
+        run: echo "MAIN_VERSION=${{ github.event.release.name }}\nDATE_VERSION=$(date +'%Y-%m-%d')\nIMPLEMENTATION_VERSION=${{ github.event.release.tag_name }}" > client/src/main/java/org/adempiere/version.properties
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
